Add JPMS Config