@@ -2,8 +2,19 @@
 This project is a combatibility test of the Java Platform Module System and the Spring Framework using Spring Boot.
 
 ## Building and Running
-WiP - Currently without using the module system at runtime
 
+### With JPMS
+```bash
+mvn install
+```
+```bash
+cd web
+```
+```bash
+java --add-modules java.instrument --module-path=target/modules --module example.web/red.jackal.training.spring.jpms.web.WebApplication
+```
+
+### Without JPMS
 ```bash
 mvn install
 ```
